tests/baselines/reference/genericTypeWithNonGenericBaseMisMatch.errors.txt
tests/cases/compiler/genericTypeWithNonGenericBaseMisMatch.ts(4,7): error TS2420: Class 'X<T>' incorrectly implements interface 'I'.
  Types of property 'f' are incompatible.
    Type '(a: T) => 无值' is not assignable to type '(a: { a: 数字; }) => 无值'.
      Types of parameters 'a' and 'a' are incompatible.
        Type '{ a: 数字; }' is not assignable to type 'T'.
tests/cases/compiler/genericTypeWithNonGenericBaseMisMatch.ts(8,5): error TS2322: Type 'X<{ a: 文字; }>' is not assignable to type 'I'.
  Types of property 'f' are incompatible.
    Type '(a: { a: 文字; }) => 无值' is not assignable to type '(a: { a: 数字; }) => 无值'.
      Types of parameters 'a' and 'a' are incompatible.
        Type '{ a: 数字; }' is not assignable to type '{ a: 文字; }'.
          Types of property 'a' are incompatible.
            Type '数字' is not assignable to type '文字'.


==== tests/cases/compiler/genericTypeWithNonGenericBaseMisMatch.ts (2 errors) ====
    interface I {
    	f: (a: { a: number }) => void
    }
    class X<T extends { a: string }> implements I {
          ~
!!! error TS2420: Class 'X<T>' incorrectly implements interface 'I'.
!!! error TS2420:   Types of property 'f' are incompatible.
!!! error TS2420:     Type '(a: T) => 无值' is not assignable to type '(a: { a: 数字; }) => 无值'.
!!! error TS2420:       Types of parameters 'a' and 'a' are incompatible.
!!! error TS2420:         Type '{ a: 数字; }' is not assignable to type 'T'.
    	f(a: T): void { }
    }
    var x = new X<{ a: string }>();
    var i: I = x; // Should not be allowed -- type of 'f' is incompatible with 'I'
        ~
!!! error TS2322: Type 'X<{ a: 文字; }>' is not assignable to type 'I'.
!!! error TS2322:   Types of property 'f' are incompatible.
!!! error TS2322:     Type '(a: { a: 文字; }) => 无值' is not assignable to type '(a: { a: 数字; }) => 无值'.
!!! error TS2322:       Types of parameters 'a' and 'a' are incompatible.
!!! error TS2322:         Type '{ a: 数字; }' is not assignable to type '{ a: 文字; }'.
!!! error TS2322:           Types of property 'a' are incompatible.
!!! error TS2322:             Type '数字' is not assignable to type '文字'.
    